
      \item \code{plot_RLum} was not passing the argument \code{sub}, as it was fetched by the partial
      argument matching; fixed.

      \item \code{set_RLum} produced \code{NA} as orignator, if the function calling the function
      \code{set_RLum()} was called from outside of the package using the double colons
      (e.g., \code{Luminescence::function()}); fixed.

      \item \code{smooth_RLum} add method support for \code{RLum.Data.Curve} objects.


      }



    }

  \subsection{Bugfixes and changes}{

  \itemize{

   \item \code{analyse_baSARL()}{
    \itemize{
       \item Due to a typo in the manual the \code{method_contral} parameter \code{variable.names} was
       not working if correclty typed as written in the manual (in the manual: 'variables.names', but
       correct is 'variable.names'); typo corrected fixed,
       \item Minor improvements and error corrections.

    }
  }

  \item \code{analyse_SAR.CWOSL()}{
    \itemize{
       \item Fix wrongly set threshold value for recuperation rate (#26),
       \item fix a rare bug for the combination 'recyling.ratio = NA' and more than
       one provided recyling point,
       \item a check has been implemented to refrain from using wrong rejection criteria
       keywords.
    }
  }

  \item \code{calc_AliquotSize()}{
    \itemize{
       \item Console output can now be suppressed via 'verbose = TRUE' (#24).
    }
  }


  \item \code{calc_CosmicDoseRate()}{
    \itemize{
       \item Console output can now be suppressed via 'verbose = TRUE' (#24).
    }
  }

    \item \code{calc_FastRatio()}{
    \itemize{
       \item New arguments 'Ch_L2' and 'Ch_L3' to allow the user to specify
       custom values for channels L2 and L3. Feature requested by A. Versendaal (#29).
    }
  }

  \item \code{calc_FadingCorr()}{
    \itemize{
       \item Fixed a bug where the function would crash when providing an
       \code{RLum.Results} object for \code{g_value},