@@ -1,10 +1,14 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/smooth_RLum.R
+\docType{methods}
 \name{smooth_RLum}
 \alias{smooth_RLum}
+\alias{smooth_RLum,list-method}
 \title{Smoothing of data}
 \usage{
 smooth_RLum(object, ...)
+
+\S4method{smooth_RLum}{list}(object, ...)
 }
 \arguments{
 \item{object}{\code{\linkS4class{RLum}} (\bold{required}): S4 object of
@@ -25,11 +29,15 @@ corresponding function will be selected. Allowed arguments can be found
 in the documentations of the corresponding \code{\linkS4class{RLum}} class. The smoothing
 is based on an internal function called \code{.smoothing}.
 }
+\section{Methods (by class)}{
+\itemize{
+\item \code{list}: Returns a list of \code{\linkS4class{RLum}} objects that had been passed to \code{\link{smooth_RLum}}
+}}
 \note{
 Currenlty only \code{RLum} objects of class \code{RLum.Data.Curve} and \code{RLum.Analysis} (with curve data) are supported!
 }
 \section{Function version}{
- 0.1.0 (2016-12-15 15:32:41)
+ 0.1.0 (2016-12-16 09:07:56)
 }
 \examples{
 
